# automation-test-note

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
containerize-env/: index.html
docs/: containerize-env.md  index.md  selenium.md  setup-android-ios-env.md  system-architecture.md
docs/setup-env/: linux-setup.md  mac-setup.md
docs/setup-env/install-python/: install-python.md
js/: custom.js
resources/: main.html
search/: search_index.json
selenium/: index.html
setup-android-ios-env/: index.html
setup-env/install-python/install-python/: index.html
setup-env/linux-setup/: index.html
setup-env/mac-setup/: index.html
system-architecture/: index.html
